--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "author": "sitek94",
   "license": "MIT",
   "scripts": {
-    "dev": "npx serve",
-    "build": "node build.js"
+    "dev": "snowpack dev",
+    "build": "snowpack build"
   },
   "devDependencies": {
-    "esbuild": "^0.12.0"
+    "snowpack": "^3.4.0"
   }
 }
