--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "snowpack build"
   },
   "devDependencies": {
-    "snowpack": "^3.4.0"
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.26.0",
+    "snowpack": "^3.4.0",
+    "typescript": "^4.2.4"
   }
 }
