--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-libs",
   "author": "sitek94",
+  "main": "src/index.tsx",
   "license": "MIT",
   "scripts": {
     "dev": "snowpack dev",
