--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.26.0",
+    "prettier": "2.3.0",
     "snowpack": "^3.4.0",
     "typescript": "^4.2.4"
   }
