🧟‍♂️ use more appropriate project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-libs",
+  "name": "my-frankensteinish-libs",
   "author": "sitek94",
   "main": "src/index.tsx",
   "license": "MIT",
