--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.tsx",
   "license": "MIT",
   "scripts": {
-    "dev": "snowpack dev",
+    "start": "snowpack dev",
     "build": "snowpack build"
   },
   "devDependencies": {
